--- a/code/notebooks/Fig_5_averaged_AME.ipynb
+++ b/code/notebooks/Fig_5_averaged_AME.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "0d52875d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'seaborn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msubprocess\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Popen, PIPE\n\u001b[1;32m      5\u001b[0m hbar \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.658\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m genfromtxt\n\u001b[1;32m      8\u001b[0m plt\u001b[38;5;241m.\u001b[39mrc(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m'\u001b[39m, usetex\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from subprocess import Popen, PIPE\n",
     "\n",
     "hbar = 0.658\n",
-    "import seaborn as sns\n",
     "from numpy import genfromtxt\n",
     "plt.rc('text', usetex=True)\n",
     "\n",
@@ -23,7 +34,7 @@
     "\n",
     "#add directory to path\n",
     "import sys\n",
-    "sys.path.append('source')\n",
+    "sys.path.append('../source')\n",
     "\n",
     "from qutip_master_eq import *\n"
    ]
@@ -270,39 +281,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ec3547c2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'z' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(vs, np\u001b[38;5;241m.\u001b[39mabs(\u001b[43mz\u001b[49m[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(vs, \u001b[38;5;241m1\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mabs(z[\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m1\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mo-\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(vs, np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m30\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m/\u001b[39mvs\u001b[38;5;241m/\u001b[39mhbar\u001b[38;5;241m*\u001b[39mnp\u001b[38;5;241m.\u001b[39mpi\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'z' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "plt.plot(vs, np.abs(z[1,1]), \"o\")\n",
-    "\n",
-    "plt.plot(vs, 1-a2*np.abs(z[0,1]), \"o-\")\n",
-    "plt.plot(vs, np.exp(-30**2/vs/hbar*np.pi/2))\n",
-    "plt.plot(vs,0.1*np.exp(-30/kb/T)*30/vs*2)\n",
-    "T2 = 1e3\n",
-    "plt.plot(vs,(2*eps0/vs/T2)**2/2)z\n",
-    "plt.xscale(\"log\")\n",
-    "plt.yscale(\"log\")\n",
-    "plt.ylim(1e-6,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "049d42b5",
    "metadata": {},
@@ -312,7 +290,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
